# agent-factory

./: .gitignore  NOTICE  README.md  README_jp.md  README_zh-CN.md  README_zh-TW.md  pyproject.toml
src/agentfactory/: __init__.py  cli.py  train.py
src/agentfactory/data/: __init__.py  bin_pack_batch_sampler.py  data_collator_with_packing.py  data_collator_with_padding_and_vision.py  length_grouped_sampler.py  packing_utils.py  rl_dataset.py
src/agentfactory/data/processor/: qwen2_5_vl_processor_with_assistant_mask.py  qwen_vl_utils.py
src/agentfactory/hparams/: __init__.py  algorithm_config.py  basicflow_config.py  data_config.py  dynamic_yaml_setting.py  evaluation_config.py  inference_engine_config.py  rollout_worker_config.py  trainer_config.py
src/agentfactory/inference_engine/: __init__.py  base_inference_engine.py  vllm_api_engine.py
src/agentfactory/metrics/: __init__.py  metrics_manager.py  statistics_utils.py
src/agentfactory/profiling/: __init__.py  base_profiler.py  profiler_factory.py  pyinstrument_profiler.py  viztracer_profiler.py
src/agentfactory/rollout/: __init__.py  builtin_rewards.py  llm_provider.py  mcp_client.py  monitor.py  rewards_manager.py  rollout.py  rollout_session.py  tool_executor.py  tool_format.py
src/agentfactory/rollout/core/: __init__.py  config.py  content.py  messages.py
src/agentfactory/rollout_worker/: simple_rollout_worker.py
src/agentfactory/trainer/: __init__.py  advantage_estimator.py  agent_trainer.py  cpu_barrier.py  loss_calculator.py
src/agentfactory/trainer/losses/: liger_grpo_loss.py  liger_ppo_base.py  verl_fused_linear_for_ppo.py  verl_kernels.py  verl_linear_cross_entropy.py
src/agentfactory/training_flows/: __init__.py  basic_flow.py
src/agentfactory/visualizer/: __init__.py  html_converter.py  section_generators.py  template_manager.py  token_visualizer.py
src/agentfactory/visualizer/templates/: __init__.py  scripts.js  styles.css
src/agentfactory/visualizer_new/: README.md  __init__.py  app_generator.py  example_usage.py  legacy_api.py
(+19 files in other folders)
