[project]
name = "agentfactory"
version = "0.1.0"
description = "A reinforcement learning framework for LLM/MLLM agent training with async rollout and multimodal support"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "AgentFactory Team"},
]
maintainers = [
    {name = "AgentFactory Team"},
]
keywords = [
    "reinforcement-learning",
    "llm",
    "mllm", 
    "agent-training",
    "multimodal",
    "machine-learning",
    "pytorch",
    "transformers"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "accelerate==1.7.0",
    "anyio>=4.9.0",
    "bitsandbytes>=0.46.1",
    "datasets>=3.6.0",
    "editables>=0.5",
    "fastmcp==2.10.1",
    "flash-attn==2.8.0.post2",
    "gym~=0.25",
    "hatchling>=1.27.0",
    "liger-kernel>=0.6.0",
    "loguru>=0.7.3",
    "openai==1.90.0",
    "peft>=0.16.0",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "requests-futures>=1.0.2",
    "torch==2.7.1",
    "transformers==4.54.1",
    "trl>=0.19.1",
    "vllm==0.10.0",
    "wandb>=0.21.0",
]

[project.scripts]
agentfactory-cli = "agentfactory.cli:main"
agentfactory-train = "agentfactory.train:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "alfworld==0.4.2",
    "gym>=0.26.2",
    "gym-sokoban>=0.0.6",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "pyinstrument>=5.0.3",
    "termcolor>=3.1.0",
    "viztracer>=0.16.3",
]
